# visidata-plugins

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  setup.py  tox.ini
.github/workflows/: ci.yml  pythonpackage.yml
extras/: pudb_bpython_shell.py
plugins/: __init__.py  debugging_helpers.py  jmespath.py  kvpairs.py  parent_navigation.py  remote_control.py  split_navigation.py  vd_jmespath.py  vd_toml.py  vdrepl.py  vds3.py  vfake_extensions.py  vpager.py
tests/: common.py  pyproject.toml  requirements.in  requirements.txt  sample.json  test_roundtrip.py  test_s3.py  test_toml.py
tests/home/: .visidatarc
tests/home/.aws/: config  credentials
visidata_s3/: README.md  pyproject.toml  pytest.ini
visidata_s3/tests/: requirements.txt
visidata_s3/tests/home/: .visidatarc
visidata_s3/visidata_s3/: __init__.py  vds3.py
