[tool.poetry]
name = "VisiData Plugin Tests"
version = "0.1.0"
description = "Wrangling the botos"
authors = ["AJ Kerrigan <aj@speckledmonkey.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.0.1"
pytest-env = "^0.6.2"
tomli = "^2.0.1"
visidata = "^2.8"
awscli = "~1"
boto3 = "~1"
s3fs = "^2022.2.0"
awscli-plugin-endpoint = "^0.4"
moto = {extras = ["server"], version = "^3.0.6"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
